<resources>
    <string name="app_name">T-Rex</string>
    <string name="action_settings">Settings</string>
    <string name="insert_target_url">Insert target URL</string>
    <string name="pref_basic_category">Basic settings</string>
    <string name="pref_targetUrl">Target server</string>
    <string name="pref_targetUrl_summ">Insert URL of target server</string>
    <string name="pref_id">Device identifier</string>
    <string name="pref_id_summ">Insert user defined identifier (max 10 chars)</string>
    <string name="pref_location_category">Localization settings</string>
    <string name="pref_strategy">Localization strategy</string>
    <string name="pref_strategy_sum">Accuracy and localization strategy</string>
    <string name="pref_frequency">Frequency of localization (s)</string>
    <string name="pref_frequency_summ">Frequency of localization in seconds</string>
    <string name="pref_min_dist">Distance evoking sending (m)</string>
    <string name="pref_min_dist_summ">Distance between positions, evoking sending position to server (in meters)</string>
    <string name="pref_max_interval">Frequency of sending (s)</string>
    <string name="pref_max_interval_sum">Maximal time of sending new position to server (in seconds) - should be equal to or longer then localization frequency</string>
    <string name="pref_other">Other settings</string>
    <string name="pref_keep_screen_on">Keep screen on</string>
    <string name="pref_keep_screen_on_summ">Keep screen on when application is running</string>
    <string name="pref_keep_cpu_on">Keep CPU on</string>
    <string name="pref_keep_cpu_on_summ">Keep localization even if screen is off</string>
    <string name="localiz_run">Localization is running</string>
    <string name="localiz_not_run">Localization is not running</string>
    <string name="localiz_started">Localization started</string>
    <string name="localiz_could_not_start">Could not start localization service</string>
    <string name="localiz_stopped">Localization stopped</string>
    <string name="notif_title">T-Rex localization is running</string>
    <string name="notif_text">Touch to show application</string>
    <string name="crash_dialog_title">T-Rex unexpected error</string>
    <string name="crash_toast_text">Please send us generated report by e-mail</string>
    <string name="pref_check4update">Check for update</string>
    <string name="pref_check4update_summ">Check for application update on start up</string>
    <string name="app_up_to_date">Your application is up-to-date</string>
    <string name="new_version_title">New version available</string>
    <string name="new_version_message">Do you want to open the application download pate?</string>
    <string name="set_target_url">Set target server URL</string>
    <string name="set_device_id">Set device identifier</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_title">Main menu</string>
    <string name="app_version">Version</string>
    <string name="app_credits">T-MAPY spol. s r.o.\nApache License 2.0\nhttps://github.com/T-MAPY/T-Rex</string>
    <string name="pref_kalman_mps">Average speed (mps)</string>
    <string name="pref_kalman_mps_sum">Set filtering of locations by average speed in meters per seconds (0 - disabled, 3 - walking, 7 - biking, 15 - driving city)</string>
    <string name="test_exception">Test exception</string>
    <string name="test_exception_message">Confirm dialog to raise testing exception.</string>
    <string name="cannot_connect_to_server">Network connection disabled - position will be send later</string>
    <string name="cannot_check_new_version">Can\'t check for new version</string>
    <string name="buffered_locations_sent">Previous locations sent to server</string>
    <string name="pref_geocoding">Address finding</string>
    <string name="pref_geocoding_summ">Try to find address of current location</string>
    <string name="dialog_delete_title">Delete?</string>
    <string name="dialog_delete_message">Are you sure you want to delete the track?</string>
    <string name="pref_count_of_stored_tracks">Keep tracks</string>
    <string name="pref_count_of_stored_tracks_sum">Count of tracks stored in device</string>
    <string name="http_server_not_accessible">Can\'t connect to server</string>
    <string name="http_server_response">Server response</string>
    <string name="text_duration_empty">0:00:00</string>
    <string name="text_position_speed_empty">0 km/h</string>
    <string name="text_position_accuracy">0 m</string>
    <string name="text_http_response_empty">\?</string>
    <string name="text_distance_empty">0,00 km</string>
    <string name="text_position_alt_empty">0 m</string>
    <string name="text_position_date_empty">0:00:00</string>
    <string name="text_address_empty">...</string>
    <string name="perm_localiz_right_needed">Localization permission is necessary to run localization</string>
    <string name="perm_localiz_not_granted">Can\'t perform localization - permission was not granted</string>
    <string name="perm_internet_for_updates_not_granted">Can\'t check for updates - permission was not granted</string>
    <string name="perm_internet_check_for_update_needed">Internet permission is necessary to check for updates</string>
    <string name="perm_internet_for_send_location_not_granted" >Can\'t send position to server - permission was not granted</string>
    <string name="menu_title">Main menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_update">Check for update</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="app_description">Android Tracking Solution</string>
    <string name="pref_accessKey">Access key</string>
    <string name="pref_accessKey_summ">Insert access key to defined server</string>
    <string name="pref_startOnStartup">Start localization on system startup</string>
    <string name="pref_startOnStartup_summ">Automatically start localization on system startup</string>
    <string name="cannot_start_localization">Can\'t start localization</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_network_not_enabled">GPS is not enabled</string>
    <string name="gps_open_location_settings">Open location settings</string>
    <string name="airplane_mode_enabled">Airplane mode is enabled</string>
    <string name="airplane_open_settings">Open settings</string>
    <string name="cannot_start_localization_due_airplane">Can\'t start localization - airplane mode enabled</string>
    <string name="cannot_start_localization_due_gps_settings">Can\'t start localization - GPS disabled</string>
    <string name="Ok">OK</string>
    <string name="activity_label">Activity:</string>
    <string name="default_activity">trip</string>
    <string name="pref_send_activity">Type of activity</string>
    <string name="pref_send_activity_summ">Send user defined type of activity to the server</string>
    <string name="select_activity_dialog_title">Type of activity</string>
    <string name="activity_updated">Activity updated</string>
    <string name="activity_undefined">Insert or select activity</string>
    <string name="selectActivityDialogButton">Add</string>
</resources>
