<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="pref_basic_category"
        android:title="@string/pref_basic_category">
        <EditTextPreference android:key="pref_targetUrl"
            android:title="@string/pref_targetUrl"
            android:inputType="textUri"
            android:summary="@string/pref_targetUrl_summ" />
        <EditTextPreference android:key="pref_id"
            android:title="@string/pref_id"
            android:inputType="text"
            android:summary="@string/pref_id_summ"/>
        <EditTextPreference android:key="pref_securityString"
            android:title="@string/pref_securityString"
            android:summary="@string/pref_securityString_summ"
            android:inputType="textPassword"/>
    </PreferenceCategory>
    <PreferenceCategory android:key="pref_location_category" android:title="@string/pref_location_category">
        <EditTextPreference
            android:inputType="number"
            android:defaultValue="20"
            android:key="pref_loc_frequency"
            android:title="@string/pref_frequency"
            android:summary="@string/pref_frequency_summ"/>
        <EditTextPreference android:key="pref_send_interval"
            android:inputType="number"
            android:defaultValue="120"
            android:title="@string/pref_max_interval"
            android:summary="@string/pref_max_interval_sum"/>
        <EditTextPreference android:key="pref_min_dist"
            android:inputType="number"
            android:defaultValue="60"
            android:title="@string/pref_min_dist"
            android:summary="@string/pref_min_dist_summ"/>
        <EditTextPreference android:key="pref_kalman_mps"
            android:inputType="number"
            android:defaultValue="15"
            android:title="@string/pref_kalman_mps"
            android:summary="@string/pref_kalman_mps_sum"/>
        <ListPreference
            android:key="pref_loc_strategy"
            android:entries="@array/strategyListOptions"
            android:entryValues="@array/strategyListValues"
            android:defaultValue="PRIORITY_HIGH_ACCURACY"
            android:summary="@string/pref_strategy_sum"
            android:title="@string/pref_strategy" />
    </PreferenceCategory>
    <PreferenceCategory android:key="pref_other_category"
        android:title="@string/pref_other">
        <EditTextPreference android:key="pref_keep_number_of_tracks"
            android:inputType="number"
            android:defaultValue="30"
            android:title="@string/pref_count_of_stored_tracks"
            android:summary="@string/pref_count_of_stored_tracks_sum"/>
        <CheckBoxPreference
            android:key="pref_geocoding"
            android:title="@string/pref_geocoding"
            android:summary="@string/pref_geocoding_summ"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_screen_on"
            android:title="@string/pref_keep_screen_on"
            android:summary="@string/pref_keep_screen_on_summ"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_check4update"
            android:title="@string/pref_check4update"
            android:summary="@string/pref_check4update_summ"
            android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>