<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/grp1" android:checkableBehavior="none" >
        <item
            android:id="@+id/settings_menu_item"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:checkable="false"/>
        <item
            android:id="@+id/reload_menu_item"
            android:title="@string/menu_update"
            android:checkable="false"
            android:icon="@drawable/ic_autorenew_black_24dp"/>
        <item
            android:id="@+id/help_item"
            android:checkable="false"
            android:title="@string/menu_help"
            android:icon="@drawable/ic_help_outline_black_24dp"/>
        <item
            android:id="@+id/about_item"
            android:checkable="false"
            android:title="@string/menu_about"
            android:icon="@drawable/ic_info_outline_black_24dp"/>
    </group>
</menu>