<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    tools:context="cz.tmapy.android.trex.MainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- This LinearLayout represents the contents of the screen  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- The ActionBar displayed at the top -->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/new_track"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_duration"
                            style="@style/LastPositionTextViewStyle"
                            android:layout_gravity="start|top"
                            android:text="@string/text_duration_empty"
                            android:textSize="32sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|top"
                            android:orientation="horizontal"
                            android:paddingTop="5dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="6dp"
                                android:alpha="0.7"
                                android:src="@drawable/ic_directions_run_white_24dp" />

                            <TextView
                                android:id="@+id/text_position_speed"
                                style="@style/LastPositionTextViewStyle"
                                android:text="@string/text_position_speed_empty" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|top"
                            android:orientation="horizontal"
                            android:paddingTop="2dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="6dp"
                                android:alpha="0.7"
                                android:src="@drawable/ic_gps_fixed_white_24dp" />

                            <TextView
                                android:id="@+id/text_position_accuracy"
                                style="@style/LastPositionTextViewStyle"
                                android:text="@string/text_position_accuracy" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|top"
                            android:orientation="horizontal"
                            android:paddingTop="2dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="6dp"
                                android:alpha="0.7"
                                android:src="@drawable/ic_import_export_white_24dp" />

                            <TextView
                                android:id="@+id/text_http_response"
                                style="@style/LastPositionTextViewStyle"
                                android:singleLine="false"
                                android:text="@string/text_http_response_empty" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_distance"
                            style="@style/LastPositionTextViewStyle"
                            android:layout_gravity="start|top"
                            android:text="@string/text_distance_empty"
                            android:textSize="32sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|top"
                            android:orientation="horizontal"
                            android:paddingTop="5dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="6dp"
                                android:alpha="0.7"
                                android:src="@drawable/ic_terrain_white_24dp" />

                            <TextView
                                android:id="@+id/text_position_alt"
                                style="@style/LastPositionTextViewStyle"
                                android:text="@string/text_position_alt_empty" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|top"
                            android:orientation="horizontal"
                            android:paddingTop="2dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="6dp"
                                android:alpha="0.7"
                                android:src="@drawable/ic_timelapse_white_24dp" />

                            <TextView
                                android:id="@+id/text_position_date"
                                style="@style/LastPositionTextViewStyle"
                                android:text="@string/text_position_date_empty" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="2dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="6dp"
                                android:alpha="0.7"
                                android:src="@drawable/ic_location_city_white_24dp" />

                            <TextView
                                android:id="@+id/text_address"
                                style="@style/LastPositionTextViewStyle"
                                android:singleLine="false"
                                android:text="@string/text_address_empty" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <ListView
                    android:id="@+id/list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="true"
                android:scaleType="center"
                android:src="@drawable/ic_play_arrow_white_36dp"
                app:backgroundTint="@color/accent"
                app:borderWidth="0dp"
                app:elevation="10dp"
                app:fabSize="normal"
                app:layout_anchor="@id/new_track"
                app:layout_anchorGravity="bottom|right|end" />

        </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>

    <!-- The navigation drawer that comes from the left -->
    <!-- Note that `android:layout_gravity` needs to be set to 'start' -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/nav_header"
        app:itemTextAppearance="@style/NavigationDrawerItemStyle"
        app:menu="@menu/drawer_menu" />

</android.support.v4.widget.DrawerLayout>